Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ground-state.ipynb
@@ -21,8 +21,8 @@
     "\n",
     "<iframe src=\"https://video.ibm.com/embed/recorded/132414925\" width=\"690\" height=\"390\"></iframe>\n",
     "\n",
-    "**References**\n",
-    "\n",
+    "### References\n",
+    "The following articles are referenced in the above video.\n",
     "* [Quantum Chemistry in the Age of Quantum Computing, Cao, et al.](https://arxiv.org/pdf/1812.09976.pdf)\n",
     "* [Quantum computational chemistry, McArdle, et al.](https://arxiv.org/pdf/1808.10402.pdf)\n",
     "\n",
@@ -39,7 +39,7 @@
     "\n",
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, please see the [lesson on Hamiltonians](https://learning.quantum.ibm.com/course/quantum-chemistry-with-vqe/the-hamiltonian) for guidance. The code block below simply sets up the components explained in previous lessons. Here we have chosen to model H2 simply because its Hamiltonian is compact enough to write out. For extensions to more complex molecules, see the [Example Molecule notebook](https://learning-api.quantum.ibm.com/assets/4075feeb-538c-4127-8fef-57d109bf5ae3.ipynb) introduced in the Hamiltonian lesson."
+    "As stated previously, we will assume here that a suitably formatted Hamiltonian of interest has already been generated. If you have questions about that, please see the [lesson on Hamiltonians](/learning/courses/quantum-chemistry-with-vqe/the-hamiltonian) for guidance. The code block below sets up the components explained in previous lessons. Here we have chosen to model H2 because its Hamiltonian is compact enough to write out. For extensions to more complex molecules, see the [Example Molecule notebook](https://learning-api.quantum.ibm.com/assets/4075feeb-538c-4127-8fef-57d109bf5ae3.ipynb) introduced in the Hamiltonian lesson."
    ]
   },
   {
@@ -148,7 +148,7 @@
    "id": "737158af-066a-46e7-a172-9ff402cd2f18",
    "metadata": {},
    "source": [
-    "Now we construct our cost function. This is obviously related to the Hamiltonian, but differs in that the Hamiltonian is an operator, and we want a function that returns the expectation value of that operator, using Estimator. Of course, it accomplishes this using the ansatz and the variational parameters, so all these show up as arguments. Below, we define slightly different versions for use on real hardware and on a simulator."
+    "Now we construct our cost function. This is obviously related to the Hamiltonian, but differs in that the Hamiltonian is an operator, and we want a function that returns the expectation value of that operator, using Estimator. Of course, it accomplishes this by using the ansatz and the variational parameters, so all these show up as arguments. Below, we define slightly different versions for use on real hardware or simulators."
    ]
   },
   {
@@ -213,9 +213,9 @@
    "source": [
     "Optimizing the circuit for running on a real backend is a rich and critical topic. But it is not specific to VQE. For now, we will simply remind you of two important terms:\n",
     "\n",
-    "* **[optimization\\_level](https://docs.quantum.ibm.com/api/qiskit/transpiler#working-with-preset-pass-managers)**: This describes how well the circuit is tailored to the layout of the backend selected. The lowest optimization level just does the bare minimum needed to get the circuit running on the device; it maps the circuit qubits to the device qubits and adds swap gates to allow all 2-qubit operations. The highest optimization level is much smarter and uses lots of tricks to reduce the overall gate count. Since multi-qubit gates have high error rates and qubits decohere over time, the shorter circuits should give better results.\n",
-    "* **[Dynamical Decoupling](https://docs.quantum.ibm.com/api/qiskit/qiskit.transpiler.passes.DynamicalDecoupling)**: We can apply a sequence of gates to idling qubits. This cancels out some unwanted interactions with the environment.\n",
-    "  Please consult the linked documentation for more information on optimizing circuits. The code below generates a mass manager using preset pass managers from qiskit.transpiler."
+    "* **[optimization\\_level](/docs/api/qiskit/transpiler#working-with-preset-pass-managers)**: This describes how well the circuit is tailored to the layout of the backend selected. The lowest optimization level just does the bare minimum needed to get the circuit running on the device; it maps the circuit qubits to the device qubits and adds swap gates to allow all two-qubit operations. The highest optimization level is much smarter and uses lots of tricks to reduce the overall gate count. Since multi-qubit gates have high error rates and qubits decohere over time, the shorter circuits should give better results.\n",
+    "* **[Dynamical Decoupling](/docs/api/qiskit/qiskit.transpiler.passes.DynamicalDecoupling)**: We can apply a sequence of gates to idling qubits. This cancels out some unwanted interactions with the environment.\n",
+    "  Consult the linked documentation for more information on optimizing circuits. The code below generates a mass manager using preset pass managers from `qiskit.transpiler`."
    ]
   },
   {
@@ -305,9 +305,9 @@
    "source": [
     "## Step 3: Execute using Qiskit Primitives.\n",
     "\n",
-    "Before we execute on the selected hardware, it is a good idea to use a simulator for cursory debugging, and sometimes for estimates of error. For those reasons, we briefly show how to run VQE on a simulator. But it is critical to note that **no classical computer, simulator or GPU** can accurately simulate the full functionality of a highly-entangled 127-qubit quantum computer. In the present era of quantum utility, simulators will have limited use.\n",
+    "Before we execute on the selected hardware, it is a good idea to use a simulator for cursory debugging, and sometimes for estimates of error. For those reasons, we briefly show how to run VQE on a simulator. But it is critical to note that **no classical computer, simulator, or GPU** can accurately simulate the full functionality of a highly-entangled 127-qubit quantum computer. In the present era of quantum utility, simulators will have limited use.\n",
     "\n",
-    "Recall that for each choice of parameters in the variational circuit, an expectation value must be calculated (since that is the value to be minimized). As you may have already guessed, the most efficient way to do that is using the Qiskit Primitive, Estimator. We'll start by using a local simulator, which will require that we use the local version of Estimator called BackendEstimator.\n",
+    "Recall that for each choice of parameters in the variational circuit, an expectation value must be calculated (since that is the value to be minimized). As you may have already guessed, the most efficient way to do that is using the Qiskit primitive, Estimator. We'll start by using a local simulator, which will require that we use the local version of Estimator called BackendEstimator.\n",
     "\n",
     "Keeping the real backend we used for optimization, we can import a model of the noise behavior of that device to then use with the local simulator of our choice. Here, we will use the aer_simulator_statevector."
    ]
@@ -405,7 +405,7 @@
    "id": "f3e80300-1546-4a81-8c29-c0a065766ca6",
    "metadata": {},
    "source": [
-    "This code evaluated successfully, though it did not converge, which we expected. We will proceed running the calculation on real hardware, and then discuss the outputs. For real backends, we will use the Qiskit Runtime Estimator. We will want to execute this inside a Qiskit Runtime Session, and we will generally want to specify options for that session."
+    "This code evaluated successfully, though it did not converge, which we expected. We will proceed running the calculation on real hardware, and then discuss the outputs. For real backends, we will use the Qiskit Runtime Estimator. We will want to execute this inside a Qiskit Runtime session and we will generally want to specify options for that session."
    ]
   },
   {
@@ -427,13 +427,13 @@
    "source": [
     "Among other things, using a session means our job will only wait in the queue once, to begin. Subsequent iterations of the classical optimizer will not be queued. In the session, we can set resilience and optimization levels. These tools are important enough that we include a brief review of each and their importance in VQE, with links to learn more:\n",
     "\n",
-    "* Runtime Sessions: VQE is inherently iterative, with the classical optimizer selecting new variational parameters, and thus new gates being used, in each subsequent trial. Without using Sessions, this could result in an additional queue time between each trial circuit. Encapsulating the VQE calculation inside a Runtime Session results in only one initial queue prior to the job's start, but no additional queue time between variational steps. This strategy was already used in the previous lesson's example, but may play an even more important role when varying geometry. For more on Sessions, visit its [documentation page](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Session).\n",
-    "* Estimator's built-in Optimization: In Estimator there are built-in options for optimizing a calculation. In many contexts (Estimator included), settings are limited to 0 and 1, with 0 indicating no optimization, and 1 (the default) indicating some optimization of your circuit to hardware selected. Some other contexts allow settings of  0, 1, 2, or 3. For more on the specific methods used in different settings, see the [documentation](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options#optimization_level). Here, we will actually set optimization to 0, and use 'skip\\_transpilation = true', because we have already transpiled our circuit using the pass manager above, in the optimization section.\n",
-    "* Estimator's built-in Resilience: As with optimization, Estimator has built-in settings for resilience against errors, corresponding to different approaches to error mitigation. Here, setting resilience to 0, 1, 2, and 3 correspond to no mitigation, TREX, ZNE, and PEC techniques, respectively. For more information, please see [documentation](https://docs.quantum.ibm.com/run/configure-error-mitigation).\n",
+    "* Runtime sessions: VQE is inherently iterative, with the classical optimizer selecting new variational parameters, and thus new gates being used, in each subsequent trial. Without using sessions, this could result in additional queue time between each trial circuit. Encapsulating the VQE calculation inside a session results in only one initial queue prior to the job's start, but no additional queue time between variational steps. This strategy was already used in the previous lesson's example, but may play an even more important role when varying geometry. For more about sessions, review the  [execution modes documentation](/docs/guides/execution-modes).\n",
+    "* Estimator's built-in optimization: In Estimator there are built-in options for optimizing a calculation. In many contexts (Estimator included), settings are limited to 0 and 1, with 0 indicating no optimization, and 1 (the default) indicating some optimization of your circuit to hardware selected. Some other contexts allow settings of  0, 1, 2, or 3. For more on the specific methods used in different settings, see the [documentation](/docs/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options#optimization_level). Here, we will actually set optimization to 0, and use 'skip\\_transpilation = true', because we have already transpiled our circuit using the pass manager above, in the optimization section.\n",
+    "* Estimator's built-in resilience: As with optimization, Estimator has built-in settings for resilience against errors, corresponding to different approaches to error mitigation. To learn about resilience level settings, refer to the  [documentation](/docs/guides/configure-error-mitigation).\n",
     "\n",
     "It is worth noting that error mitigation plays a nuanced role in the convergence of a VQE calculation. The classical optimizer is searching parameter space for those parameters that minimize the energy. When you are very far from the optimal parameters, a steep gradient may be apparent to the classical optimizer even in the presence of errors. But as the calculation converges and you approach the optimal values, the gradient becomes smaller, and more easily washed out by errors. How much error mitigation do you want to use? At what points in the convergence? These are choices you must make for your particular use case.\n",
     "\n",
-    "For this first hardware run, we have set resilience to 0 to facilitate a relatively fast run. For any serious application, you will want to use error mitigation. Note that in the cell below there are two sets of options: (1) options for the Runtime Session, which we have named \"session\\_options\", and (2) options for the classical optimizer, simply called \"options\" here."
+    "For this first hardware run, we have set resilience to 0 to facilitate a relatively fast run. For any serious application, you will want to use error mitigation. Note that in the cell below there are two sets of options: (1) options for the Runtime session, which we have named \"session\\_options\", and (2) options for the classical optimizer, simply called \"options\" here."
    ]
   },
   {
@@ -461,7 +461,7 @@
    "id": "deaf4bb5-032e-4d86-a517-29111acaf53f",
    "metadata": {},
    "source": [
-    "You can view the progress of your job on the IBM Quantum Platform under [Jobs](https://quantum-computing.ibm.com/jobs)."
+    "You can view the progress of your job on the IBM Quantum Platform under [Workloads](https://quantum.cloud.ibm.com/workloads)."
    ]
   },
   {
@@ -507,7 +507,7 @@
     "\n",
     "In the case above, we have a message that the maximum number of function evaluations was exceeded, and that the number of function evaluations (**nfev**) was 10. This simply means that other criteria for convergence of the optimization were not met; in other words, there is no reason to think we found the ground state energy. This is also the meaning of **success** being \"False\".\n",
     "\n",
-    "Finally, we have **x**. This is the vector of variational parameters. These are the parameters used in the calculation that yielded the minimum cost function (energy expectation value). These 8 values correspond to the 8 rotation angles in those gates in the ansatz that take variable rotation angles.\n",
+    "Finally, we have **x**. This is the vector of variational parameters. These are the parameters used in the calculation that yielded the minimum cost function (energy expectation value). These eight values correspond to the eight rotation angles in those gates in the ansatz that take variable rotation angles.\n",
     "\n",
     "Congratulations! You have run a VQE calculation on an IBM Quantum System!\n",
     "\n",
