--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -77,7 +77,9 @@
     "\n",
     "$$\n",
     "  |\\psi_k\\rangle \\approx \\left[e^{-i\\frac{\\Delta t}{2} H_2} e^{-i\\Delta t H_1} e^{-i\\frac{\\Delta t}{2} H_2} \\right]^k\\ket{\\psi_0}.\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "In the following SQD-based workflow, we will sample from this set of circuits and postprocess the combined set of bitstrings with SQD. This approach contrasts with the one used in the related tutorial [*Improving energy estimation of a chemistry Hamiltonian with SQD*](https://learning.quantum.ibm.com/tutorial/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd), where samples were drawn from a single heuristic variational circuit."
    ]
   },
   {
@@ -720,6 +722,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "482ebea3-84b8-471b-bddc-b282e23162ad",
    "metadata": {},
    "source": [
     "## References\n",
