add requirements section

--- a/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb
@@ -84,6 +84,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "- Qiskit SDK 1.0 or later with visualization support (`pip install 'qiskit[visualization]'`)\n",
+    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)\n",
+    "- SQD Qiskit addon 0.11 or later (`pip install qiskit-addon-sqd`)\n",
+    "- ffsim (`pip install ffsim`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8540487a-8033-49c2-9f30-022336105f64",
    "metadata": {},
    "source": [
