--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -82,9 +82,7 @@
     "\n",
     "service = QiskitRuntimeService()\n",
     "catalog = QiskitFunctionsCatalog(\n",
-    "    channel=\"ibm_cloud\",\n",
-    "    instance=\"USER_CRN\",\n",
-    "    token=\"USER_API_KEY\"\n",
+    "    channel=\"ibm_cloud\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
     ")\n",
     "hivqe = catalog.load(\"qunova/hivqe-chemistry\")"
    ]
