--- a/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-phase-estimation.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "The quantum Fourier transform (QFT) transforms between two bases, the computational (Z) basis, and the Fourier basis. But what does the Fourier basis mean in this context? You likely recall that the Fourier transform $F(\\omega)$ of a function $f(x)$ describes the convolution of $f(x)$ onto a sinusoidal function with frequency $\\omega$. In Layman's terms: the Fourier transform is a function describing how much of each frequency $\\omega$ we would need to build up a function $f(x)$ out of sine functions (or cosine functions). To get a better sense for what the QFT means in this context, consider the stepped images below which show a number encoded in binary, using four qubits:\n",
     "\n",
-    "<iframe src=\"https://video.ibm.com/embed/recorded/134399598\" style=\"border: 0;\" webkitallowfullscreen allowfullscreen frameborder=\"no\" width=\"480\" height=\"270\" referrerpolicy=\"no-referrer-when-downgrade\"></iframe>\n",
+    "IFRAME\n",
     "\n",
     "In the computational basis, we store numbers in binary using the states $|0\\rangle$ and $|1\\rangle$.\n",
     "\n",
@@ -124,7 +124,7 @@
     "\n",
     "In the Fourier basis, we store numbers using different rotations around the Z-axis:\n",
     "\n",
-    "<iframe src=\"https://video.ibm.com/embed/recorded/134399598\" style=\"border: 0;\" webkitallowfullscreen allowfullscreen frameborder=\"no\" width=\"480\" height=\"270\" referrerpolicy=\"no-referrer-when-downgrade\"></iframe>\n",
+    "IFRAME\n",
     "\n",
     "The number we want to store dictates the angle at which each qubit is rotated around the Z-axis. In the state $|\\widetilde{0}\\rangle$, all qubits are in the state $|{+}\\rangle$. As seen in the example above, to encode the state $|\\widetilde{5}\\rangle$ on 4 qubits, we rotated the leftmost qubit by $\\tfrac{5}{2^n} = \\tfrac{5}{16}$ full turns ($\\tfrac{5}{16}\\times 2\\pi$ radians). The next qubit is turned double this ($\\tfrac{10}{16}\\times 2\\pi$ radians, or $10/16$ full turns), this angle is then doubled for the qubit after, and so on.\n",
     "\n",
