--- a/docs/tutorials/qunova-hivqe.ipynb
+++ b/docs/tutorials/qunova-hivqe.ipynb
@@ -81,7 +81,9 @@
     "import pprint\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "catalog = QiskitFunctionsCatalog()\n",
+    "catalog = QiskitFunctionsCatalog(\n",
+    "    channel=\"ibm_cloud\", instance=\"USER_CRN\", token=\"USER_API_KEY\"\n",
+    ")\n",
     "hivqe = catalog.load(\"qunova/hivqe-chemistry\")"
    ]
   },
@@ -192,7 +194,6 @@
     "    hivqe_run = hivqe.run(\n",
     "        geometry=geom,\n",
     "        backend_name=\"\",\n",
-    "        instance=\"\",\n",
     "        max_states=40000,\n",
     "        max_expansion_states=100,\n",
     "        molecule_options=molecule_options,\n",
@@ -872,7 +873,6 @@
     "hivqe_run_1_75 = hivqe.run(\n",
     "    geometry=str_geometries[\"1.75\"],\n",
     "    backend_name=\"\",\n",
-    "    instance=\"\",\n",
     "    max_states=400000000,\n",
     "    max_expansion_states=100,\n",
     "    molecule_options=molecule_options,\n",
@@ -923,7 +923,6 @@
     "hivqe_run_2_00 = hivqe.run(\n",
     "    geometry=str_geometries[\"2.00\"],\n",
     "    backend_name=\"\",\n",
-    "    instance=\"\",\n",
     "    max_states=400000000,\n",
     "    max_expansion_states=100,\n",
     "    molecule_options=molecule_options,\n",
@@ -974,7 +973,6 @@
     "hivqe_run_5_00 = hivqe.run(\n",
     "    geometry=str_geometries[\"5.00\"],\n",
     "    backend_name=\"\",\n",
-    "    instance=\"\",\n",
     "    max_states=400000000,\n",
     "    max_expansion_states=100,\n",
     "    molecule_options=molecule_options,\n",
