add link to transpiler guides

--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -164,7 +164,7 @@
     "- Unrolling of the instructions in the quantum circuit to the hardware native instructions that the backend understands.\n",
     "- Routing of any qubits in the circuit that interact to physical qubits that are adjacent with one another.\n",
     "\n",
-    "And as always, more details about this can be found on the documentation site.\n",
+    "And as always, more details about this can be found in the [documentation](/docs/guides/transpile).\n",
     "\n",
     "Before transpiling, though, we need to choose which backend we'll run our circuit on, since the transpiler optimizes differently for different processors. This is yet another reason it's important to use an automated transpiler — you wouldn't want to go through the time-consuming process of optimizing your circuit by hand, only to realize you actually want to run your circuit on a different processor with different properties.\n",
     "\n",
