--- a/learning/courses/quantum-machine-learning/exam.mdx
+++ b/learning/courses/quantum-machine-learning/exam.mdx
@@ -1,6 +1,6 @@
 ---
 title: Exam | Quantum machine learning
-description: Take a 20-question exam on the IBM Training site to test your quantum machine learning skills and receive a badge through Credly.
+description: Take a 20-question exam on the IBM Training site to test your quantum machine learning skills and receive a badge through Credly!
 ---
 
 # Exam & badge
