--- a/learning/courses/quantum-machine-learning/exam.mdx
+++ b/learning/courses/quantum-machine-learning/exam.mdx
@@ -11,7 +11,7 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 After completing the reading and activities in this course, click the button below to navigate to IBM Training, where you can take the quantum machine learning badging exam.
 
-The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you use to register with IBM Training.
+The exam consists of 20 questions, and you must answer at least 16 correctly to pass. Upon receiving a passing score, your badge will automatically be sent to the email you used to register with IBM Training.
 
 Make sure you're ready to take the exam. If you don't receive a passing score in two attempts, the exam becomes temporarily locked.
 
