--- a/docs/guides/composer.mdx
+++ b/docs/guides/composer.mdx
@@ -1,6 +1,6 @@
 ---
 title: Explore gates and circuits with IBM Quantum Composer
-description: IBM Quantum Composer is a graphical quantum programming tool that lets you drag and drop operations to build quantum circuits and run them on real quantum hardware or simulators.
+description: IBM Quantum Composer is a graphical programming tool. Drag and drop operations to build circuits and run them on quantum hardware.
 platform: cloud
 ---
 # Explore gates and circuits with IBM Quantum Composer
